scroll and animation

--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -17,9 +17,9 @@
                     для самых взыскательных клиентов
                 </h2>
                 <div class="landscape-solutions__title_line section__title_line"></div>
-                <button class="landscape-solutions__request button">
+                <a class="landscape-solutions__request button" href="#questionForm">
                     Оставить заявку
-                </button>
+                </a>
             </div>
             <div class="landscape-solutions__image _3">
                 <img src="/img/landscape-solutions2.png" alt="">
@@ -29,9 +29,9 @@
             <div class="landscape-solutions__image _4">
                 <img src="/img/landscape-solutions3.png" alt="">
             </div>
-            <button class="landscape-solutions__expense-account button">
+            <a class="landscape-solutions__expense-account button" href="#questionForm">
                 Рассчитать стоимость проекта
-            </button>
+            </a>
         </div>
         <div class="landscape-solutions__image _5">
             <img src="/img/landscape-solutions4.png" alt="">
@@ -57,9 +57,9 @@
                         С уважением Евгений Джелемей – ландшафтный архитектор.
                     </p>
                 </div>
-                <button class="landscape__button button">
+                <a class="landscape__button button" href="#questionForm">
                     Получить консультацию
-                </button>
+                </a>
             </div>
             <div class="landscape__image">
                 <img src="/img/avatar_photo.png" alt="Евгений Джелемей">
@@ -211,9 +211,9 @@
                         <input class="consultation__input input" type="email" placeholder="E-mail">
                     </div>
                     <div class="consultation__content_line"></div>
-                    <button class="consultation__button button-second">
+                    <a class="consultation__button button-second" href="#questionForm">
                         ПОЛУЧИТЬ
-                    </button>
+                    </a>
                 </div>
                 <div class="consultation__content_bottom">
                     <label class="checkbox" for="personalData">
@@ -310,7 +310,7 @@
                     Уникальность
                 </h2>
             </div>
-            <a class="uniqueness__feedback">
+            <a class="uniqueness__feedback" href="#questionForm">
                 <div class="uniqueness__feedback_text">
                     СВЯЗАТЬСЯ С НАМИ
                 </div>
@@ -509,7 +509,7 @@
                 </div>
             </li>
         </ol>
-        <a class="stages-work__order button" href="">
+        <a class="stages-work__order button" href="#questionForm">
             Заказать проект
         </a>
     </section>
@@ -521,9 +521,9 @@
                     Закажи ландшафтный дизайн под ключ и получи скидку 10%
                 </h2>
             </div>
-            <button class="substrate-form__button button">
+            <a class="substrate-form__button button" href="#questionForm">
                 Оставить заявку
-            </button>
+            </a>
         </div>
         <div class="substrate-form__images">
             <img src="/img/substrate-form_top.png" alt="">
@@ -566,9 +566,9 @@
                 <div class="price__item_hide"></div>
             </li>
         </ol>
-        <button class="price__button button">
+        <a class="price__button button" href="#questionForm">
             Заказать рассчет
-        </button>
+        </a>
         <div class="price__hint">
             * Указанные цены не являются публичной офертой. Уточнить наличие и стоимость продукции на текущий день можно
             у наших менеджеров по контактным телефонам или с помощью формы обратной связи.
@@ -1004,7 +1004,7 @@
                 </div>
             </li>
         </ol>
-        <a class="questions__all-link button" href="">
+        <a class="questions__all-link button" href="/faq.html">
             Читать все
         </a>
     </section>
@@ -1194,7 +1194,7 @@
                 </a>
             </li>
         </ul>
-        <a class="products__button button" href="">
+        <a class="products__button button" href="/blog.html">
             Читать все статьи
         </a>
     </section>
