--- a/app/sections/question-form.html
+++ b/app/sections/question-form.html
@@ -1,4 +1,4 @@
-<section class="question-form">
+<section class="question-form" id="questionForm">
     <div class="section__title question-form__title">
         <div class="section__title_line"></div>
         <h2 class="question-form__h2">
