--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -936,15 +936,29 @@
                     </div>
                 </li>
             </ul>
-            <div class="reviews__counter">
-                <div class="reviews__counter_start">
-                    02
+            <div class="reviews__bottom">
+                <div class="reviews__arrow">
+                    <svg width="3.5rem" height="0.81rem" viewBox="0 0 56 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M1 6.5L8.92793 1V6.5V12L1 6.5Z" fill="var(--second-color)"></path>
+                        <path d="M8.92793 6.5V12L1 6.5L8.92793 1V6.5ZM8.92793 6.5H56" stroke="var(--second-color)"></path>
+                    </svg>
                 </div>
-                <span>
-                    /
-                </span>
-                <div class="reviews__counter_max">
-                    13
+                <div class="reviews__counter">
+                    <div class="reviews__counter_start">
+                        2
+                    </div>
+                    <span>
+                        /
+                    </span>
+                    <div class="reviews__counter_max">
+                        13
+                    </div>
+                </div>
+                <div class="reviews__arrow _right">
+                    <svg width="3.5rem" height="0.81rem" viewBox="0 0 56 13" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <path d="M55 6.5L47.0721 1V6.5V12L55 6.5Z" fill="var(--second-color)"></path>
+                        <path d="M47.0721 6.5V12L55 6.5L47.0721 1V6.5ZM47.0721 6.5H0" stroke="var(--second-color)"></path>
+                    </svg>
                 </div>
             </div>
         </div>
