--- a/app/pages/catalog.html
+++ b/app/pages/catalog.html
@@ -633,82 +633,7 @@
     </section>
 </div>
 
-<section class="reviews">
-    <div class="container">
-        <div class="section__title reviews__title">
-            <div class="section__title_line"></div>
-            <h2 class="reviews__h2">
-                Отзывы клиентов
-            </h2>
-        </div>
-        <div class="reviews__list">
-            <ul class="reviews__list_inner" style="--transform-x: 0%">
-                <li class="reviews__item">
-                    <div class="reviews__item_name">
-                        Отец Владимир
-                    </div>
-                    <div class="reviews__item_comment">
-                        Недавно завершили строительство нашего Храма. Место выбрали
-                        изначально пустынное. Поэтому сразу же встал вопрос про
-                        облагораживание территории. Некоторые из прихожан предлагали
-                        свою помощь. Мы им благодарны. Но понимаем - любой работой
-                        должны заниматься профессионалы. Тем более, что участок - 5
-                        гектаров. Вряд ли любители справятся с такой задачей. Один из
-                        прихожан посоветовал нам студию Ландшафтный Дом. Настоящие
-                        мастера! Быстро вникли в суть задачи. Предложили решения
-                        Выслушали пожелания. И реализовали все как раз к моменту
-                        открытия Храма!
-                    </div>
-                </li>
-                <li class="reviews__item">
-                    <div class="reviews__item_name">
-                        Дарья
-                    </div>
-                    <div class="reviews__item_comment">
-                        Удивлена, что насколько нужно всего сделать при оформлении загородного участка. Просто
-                        разрываюсь на
-                        части. И когда уже опустились руки, мне посоветовали обратиться к услугам ландшафтного
-                        дизайнера. И
-                        нисколько не пожалела, что сделала это. Ребята всё быстро организовали, работали согласно
-                        оговоренным условиям, если нужно было что-то изменить обязательно обсуждали все моменты со мной,
-                        а
-                        потом уже приступали к работе. Мне это очень понравилось. Люблю, когда всё четко и ясно, без
-                        лишних
-                        заморочек.
-                    </div>
-                </li>
-                <li class="reviews__item">
-                    <div class="reviews__item_name">
-                        Дарья
-                    </div>
-                    <div class="reviews__item_comment">
-                        Удивлена, что насколько нужно всего сделать при оформлении загородного участка. Просто
-                        разрываюсь на
-                        части. И когда уже опустились руки, мне посоветовали обратиться к услугам ландшафтного
-                        дизайнера. И
-                        нисколько не пожалела, что сделала это. Ребята всё быстро организовали, работали согласно
-                        оговоренным условиям, если нужно было что-то изменить обязательно обсуждали все моменты со мной,
-                        а
-                        потом уже приступали к работе. Мне это очень понравилось. Люблю, когда всё четко и ясно, без
-                        лишних
-                        заморочек.
-                    </div>
-                </li>
-            </ul>
-            <div class="reviews__counter">
-                <div class="reviews__counter_start">
-                    02
-                </div>
-                <span>
-                    /
-                </span>
-                <div class="reviews__counter_max">
-                    13
-                </div>
-            </div>
-        </div>
-    </div>
-</section>
+@@include('../sections/reviews.html')
 
 <div class="container">
     @@include('../sections/question-form.html')
