--- a/app/pages/product.html
+++ b/app/pages/product.html
@@ -23,9 +23,11 @@
     <section class="product-shop">
         <div class="section__title product-shop__title">
             <div class="section__title_line"></div>
-            <h2 class="product-shop__h2">
-                Боярышник обыкновенный
-            </h2>
+            <div class="product-shop__h2">
+                <h2>
+                    Боярышник обыкновенный
+                </h2>
+            </div>
         </div>
         <div class="product-shop__application">
             <div class="product-shop__application_favorite">
@@ -193,39 +195,57 @@
                         </th>
                     </tr>
                     <tr>
-                        <td>
-                            Я00097
+                        <td class="product-shop__table_info" data-title="Артикул">
+                            <span>
+                                Я00097
+                            </span>
                         </td>
-                        <td>
+                        <td class="product-shop__table_info" data-title="Фото">
                             <div class="product-shop__table_image">
                                 <img src="/img/hawthorn-common.png" alt="">
                             </div>
                         </td>
-                        <td>
-                            -
+                        <td class="product-shop__table_info" data-title="H (см)">
+                            <span>
+                                -
+                            </span>
                         </td>
-                        <td>
-                            -
+                        <td class="product-shop__table_info" data-title="В (см)">
+                            <span>
+                                -
+                            </span>
                         </td>
-                        <td>
-                            -
+                        <td class="product-shop__table_info" data-title="С (л)">
+                            <span>
+                                -
+                            </span>
                         </td>
-                        <td>
-                            Stu 15.9
+                        <td class="product-shop__table_info" data-title="Stu (см)">
+                            <span>
+                                Stu 15.9
+                            </span>
                         </td>
-                        <td>
-                            -
+                        <td class="product-shop__table_info" data-title="St">
+                            <span>
+                                -
+                            </span>
                         </td>
-                        <td>
-                            -
+                        <td class="product-shop__table_info" data-title="Xv">
+                            <span>
+                                -
+                            </span>
                         </td>
-                        <td>
-                            5
+                        <td class="product-shop__table_info" data-title="Возраст">
+                            <span>
+                                5
+                            </span>
                         </td>
-                        <td>
-                            35 900 ₽
+                        <td class="product-shop__table_info" data-title="Цена">
+                            <span>
+                                35 900 ₽
+                            </span>
                         </td>
-                        <td>
+                        <td class="product-shop__table_info">
                             <button class="product-shop__table_button button-second">
                                 В корзину
                             </button>
