--- a/app/pages/index.html
+++ b/app/pages/index.html
@@ -1,40 +1,80 @@
 @@include('../layout/header.html', {
-    "title": "Ландшафт"
+"title": "Ландшафт"
 })
 
 <div class="container">
     <section class="landscape-solutions">
-        <div class="landscape-solutions__image _1">
-            <img src="/img/landscape-solutions.png" alt="">
-        </div>
-        <div class="landscape-solutions__image _2">
-            <img src="/img/landscape-solutions1.png" alt="">
-        </div>
-        <div class="landscape-solutions__center">
-            <div class="section__title landscape-solutions__title">
-                <h2 class="section__title_h2">
-                    Индивидуальные ландшафтные решения
-                    для самых взыскательных клиентов
-                </h2>
-                <div class="landscape-solutions__title_line section__title_line"></div>
-                <a class="landscape-solutions__request button" href="#questionForm">
-                    Оставить заявку
+        <div class="landscape-solutions__desktop">
+            <div class="landscape-solutions__image _1">
+                <img src="/img/landscape-solutions.png" alt="">
+            </div>
+            <div class="landscape-solutions__image _2">
+                <img src="/img/landscape-solutions1.png" alt="">
+            </div>
+            <div class="landscape-solutions__center">
+                <div class="section__title landscape-solutions__title">
+                    <h2 class="section__title_h2">
+                        Индивидуальные ландшафтные решения
+                        для самых взыскательных клиентов
+                    </h2>
+                    <div class="landscape-solutions__title_line section__title_line"></div>
+                    <a class="landscape-solutions__request button" href="#questionForm">
+                        Оставить заявку
+                    </a>
+                </div>
+                <div class="landscape-solutions__image _3">
+                    <img src="/img/landscape-solutions2.png" alt="">
+                </div>
+            </div>
+            <div class="landscape-solutions__center-right">
+                <div class="landscape-solutions__image _4">
+                    <img src="/img/landscape-solutions3.png" alt="">
+                </div>
+                <a class="landscape-solutions__expense-account button" href="#questionForm">
+                    Рассчитать стоимость проекта
                 </a>
             </div>
-            <div class="landscape-solutions__image _3">
-                <img src="/img/landscape-solutions2.png" alt="">
+            <div class="landscape-solutions__image _5">
+                <img src="/img/landscape-solutions4.png" alt="">
             </div>
         </div>
-        <div class="landscape-solutions__center-right">
-            <div class="landscape-solutions__image _4">
-                <img src="/img/landscape-solutions3.png" alt="">
+        <div class="landscape-solutions__mobile">
+            <div class="landscape-solutions__top">
+                <div class="landscape-solutions__top_left">
+                    <div class="landscape-solutions__image _1">
+                        <img src="/img/landscape-solutions.png" alt="">
+                    </div>
+                    <div class="landscape-solutions__image _2">
+                        <img src="/img/landscape-solutions1.png" alt="">
+                    </div>
+                </div>
+                <div class="landscape-solutions__center">
+                    <div class="section__title landscape-solutions__title">
+                        <h2 class="section__title_h2">
+                            Индивидуальные ландшафтные решения
+                            для самых взыскательных клиентов
+                        </h2>
+                        <div class="landscape-solutions__title_line section__title_line"></div>
+                        <a class="landscape-solutions__request button" href="#questionForm">
+                            Оставить заявку
+                        </a>
+                    </div>
+                    <div class="landscape-solutions__image _3">
+                        <img src="/img/landscape-solutions2.png" alt="">
+                    </div>
+                    <a class="landscape-solutions__expense-account button" href="#questionForm">
+                        Рассчитать стоимость проекта
+                    </a>
+                </div>
             </div>
-            <a class="landscape-solutions__expense-account button" href="#questionForm">
-                Рассчитать стоимость проекта
-            </a>
-        </div>
-        <div class="landscape-solutions__image _5">
-            <img src="/img/landscape-solutions4.png" alt="">
+            <div class="landscape-solutions__bottom">
+                <div class="landscape-solutions__image _4">
+                    <img src="/img/landscape-solutions3.png" alt="">
+                </div>
+                <div class="landscape-solutions__image _5">
+                    <img src="/img/landscape-solutions4.png" alt="">
+                </div>
+            </div>
         </div>
     </section>
 
@@ -913,13 +953,17 @@
                         <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                             <g fill="none" fill-rule="evenodd">
                                 <path d="M0 0h24v24H0z"></path>
-                                <path d="M16 4a5.95 5.95 0 0 0-3.89 1.7l-.12.11-.12-.11A5.96 5.96 0 0 0 7.73 4 5.73 5.73 0 0 0 2 9.72c0 3.08 1.13 4.55 6.18 8.54l2.69 2.1c.66.52 1.6.52 2.26 0l2.36-1.84.94-.74c4.53-3.64 5.57-5.1 5.57-8.06A5.73 5.73 0 0 0 16.27 4zm.27 1.8a3.93 3.93 0 0 1 3.93 3.92v.3c-.08 2.15-1.07 3.33-5.51 6.84l-2.67 2.08a.04.04 0 0 1-.04 0L9.6 17.1l-.87-.7C4.6 13.1 3.8 11.98 3.8 9.73A3.93 3.93 0 0 1 7.73 5.8c1.34 0 2.51.62 3.57 1.92a.9.9 0 0 0 1.4-.01c1.04-1.3 2.2-1.91 3.57-1.91z" fill="var(--third-color)" fill-rule="nonzero"></path>
+                                <path
+                                    d="M16 4a5.95 5.95 0 0 0-3.89 1.7l-.12.11-.12-.11A5.96 5.96 0 0 0 7.73 4 5.73 5.73 0 0 0 2 9.72c0 3.08 1.13 4.55 6.18 8.54l2.69 2.1c.66.52 1.6.52 2.26 0l2.36-1.84.94-.74c4.53-3.64 5.57-5.1 5.57-8.06A5.73 5.73 0 0 0 16.27 4zm.27 1.8a3.93 3.93 0 0 1 3.93 3.92v.3c-.08 2.15-1.07 3.33-5.51 6.84l-2.67 2.08a.04.04 0 0 1-.04 0L9.6 17.1l-.87-.7C4.6 13.1 3.8 11.98 3.8 9.73A3.93 3.93 0 0 1 7.73 5.8c1.34 0 2.51.62 3.57 1.92a.9.9 0 0 0 1.4-.01c1.04-1.3 2.2-1.91 3.57-1.91z"
+                                    fill="var(--third-color)" fill-rule="nonzero"></path>
                             </g>
                         </svg>
                         <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                             <g fill="none" fill-rule="evenodd">
                                 <path d="M0 0h24v24H0z"></path>
-                                <path d="M12 3.73c-1.12.07-2 1-2 2.14v2.12h-.02a9.9 9.9 0 0 0-7.83 10.72.9.9 0 0 0 1.61.46l.19-.24a9.08 9.08 0 0 1 5.84-3.26l.2-.03.01 2.5a2.15 2.15 0 0 0 3.48 1.69l7.82-6.14a2.15 2.15 0 0 0 0-3.38l-7.82-6.13c-.38-.3-.85-.46-1.33-.46zm.15 1.79c.08 0 .15.03.22.07l7.82 6.14a.35.35 0 0 1 0 .55l-7.82 6.13a.35.35 0 0 1-.57-.28V14.7a.9.9 0 0 0-.92-.9h-.23l-.34.02c-2.28.14-4.4.98-6.12 2.36l-.17.15.02-.14a8.1 8.1 0 0 1 6.97-6.53.9.9 0 0 0 .79-.9V5.87c0-.2.16-.35.35-.35z" fill="var(--third-color)" fill-rule="nonzero"></path>
+                                <path
+                                    d="M12 3.73c-1.12.07-2 1-2 2.14v2.12h-.02a9.9 9.9 0 0 0-7.83 10.72.9.9 0 0 0 1.61.46l.19-.24a9.08 9.08 0 0 1 5.84-3.26l.2-.03.01 2.5a2.15 2.15 0 0 0 3.48 1.69l7.82-6.14a2.15 2.15 0 0 0 0-3.38l-7.82-6.13c-.38-.3-.85-.46-1.33-.46zm.15 1.79c.08 0 .15.03.22.07l7.82 6.14a.35.35 0 0 1 0 .55l-7.82 6.13a.35.35 0 0 1-.57-.28V14.7a.9.9 0 0 0-.92-.9h-.23l-.34.02c-2.28.14-4.4.98-6.12 2.36l-.17.15.02-.14a8.1 8.1 0 0 1 6.97-6.53.9.9 0 0 0 .79-.9V5.87c0-.2.16-.35.35-.35z"
+                                    fill="var(--third-color)" fill-rule="nonzero"></path>
                             </g>
                         </svg>
                     </div>
@@ -946,13 +990,17 @@
                         <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                             <g fill="none" fill-rule="evenodd">
                                 <path d="M0 0h24v24H0z"></path>
-                                <path d="M16 4a5.95 5.95 0 0 0-3.89 1.7l-.12.11-.12-.11A5.96 5.96 0 0 0 7.73 4 5.73 5.73 0 0 0 2 9.72c0 3.08 1.13 4.55 6.18 8.54l2.69 2.1c.66.52 1.6.52 2.26 0l2.36-1.84.94-.74c4.53-3.64 5.57-5.1 5.57-8.06A5.73 5.73 0 0 0 16.27 4zm.27 1.8a3.93 3.93 0 0 1 3.93 3.92v.3c-.08 2.15-1.07 3.33-5.51 6.84l-2.67 2.08a.04.04 0 0 1-.04 0L9.6 17.1l-.87-.7C4.6 13.1 3.8 11.98 3.8 9.73A3.93 3.93 0 0 1 7.73 5.8c1.34 0 2.51.62 3.57 1.92a.9.9 0 0 0 1.4-.01c1.04-1.3 2.2-1.91 3.57-1.91z" fill="var(--third-color)" fill-rule="nonzero"></path>
+                                <path
+                                    d="M16 4a5.95 5.95 0 0 0-3.89 1.7l-.12.11-.12-.11A5.96 5.96 0 0 0 7.73 4 5.73 5.73 0 0 0 2 9.72c0 3.08 1.13 4.55 6.18 8.54l2.69 2.1c.66.52 1.6.52 2.26 0l2.36-1.84.94-.74c4.53-3.64 5.57-5.1 5.57-8.06A5.73 5.73 0 0 0 16.27 4zm.27 1.8a3.93 3.93 0 0 1 3.93 3.92v.3c-.08 2.15-1.07 3.33-5.51 6.84l-2.67 2.08a.04.04 0 0 1-.04 0L9.6 17.1l-.87-.7C4.6 13.1 3.8 11.98 3.8 9.73A3.93 3.93 0 0 1 7.73 5.8c1.34 0 2.51.62 3.57 1.92a.9.9 0 0 0 1.4-.01c1.04-1.3 2.2-1.91 3.57-1.91z"
+                                    fill="var(--third-color)" fill-rule="nonzero"></path>
                             </g>
                         </svg>
                         <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                             <g fill="none" fill-rule="evenodd">
                                 <path d="M0 0h24v24H0z"></path>
-                                <path d="M12 3.73c-1.12.07-2 1-2 2.14v2.12h-.02a9.9 9.9 0 0 0-7.83 10.72.9.9 0 0 0 1.61.46l.19-.24a9.08 9.08 0 0 1 5.84-3.26l.2-.03.01 2.5a2.15 2.15 0 0 0 3.48 1.69l7.82-6.14a2.15 2.15 0 0 0 0-3.38l-7.82-6.13c-.38-.3-.85-.46-1.33-.46zm.15 1.79c.08 0 .15.03.22.07l7.82 6.14a.35.35 0 0 1 0 .55l-7.82 6.13a.35.35 0 0 1-.57-.28V14.7a.9.9 0 0 0-.92-.9h-.23l-.34.02c-2.28.14-4.4.98-6.12 2.36l-.17.15.02-.14a8.1 8.1 0 0 1 6.97-6.53.9.9 0 0 0 .79-.9V5.87c0-.2.16-.35.35-.35z" fill="var(--third-color)" fill-rule="nonzero"></path>
+                                <path
+                                    d="M12 3.73c-1.12.07-2 1-2 2.14v2.12h-.02a9.9 9.9 0 0 0-7.83 10.72.9.9 0 0 0 1.61.46l.19-.24a9.08 9.08 0 0 1 5.84-3.26l.2-.03.01 2.5a2.15 2.15 0 0 0 3.48 1.69l7.82-6.14a2.15 2.15 0 0 0 0-3.38l-7.82-6.13c-.38-.3-.85-.46-1.33-.46zm.15 1.79c.08 0 .15.03.22.07l7.82 6.14a.35.35 0 0 1 0 .55l-7.82 6.13a.35.35 0 0 1-.57-.28V14.7a.9.9 0 0 0-.92-.9h-.23l-.34.02c-2.28.14-4.4.98-6.12 2.36l-.17.15.02-.14a8.1 8.1 0 0 1 6.97-6.53.9.9 0 0 0 .79-.9V5.87c0-.2.16-.35.35-.35z"
+                                    fill="var(--third-color)" fill-rule="nonzero"></path>
                             </g>
                         </svg>
                     </div>
@@ -979,13 +1027,17 @@
                         <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                             <g fill="none" fill-rule="evenodd">
                                 <path d="M0 0h24v24H0z"></path>
-                                <path d="M16 4a5.95 5.95 0 0 0-3.89 1.7l-.12.11-.12-.11A5.96 5.96 0 0 0 7.73 4 5.73 5.73 0 0 0 2 9.72c0 3.08 1.13 4.55 6.18 8.54l2.69 2.1c.66.52 1.6.52 2.26 0l2.36-1.84.94-.74c4.53-3.64 5.57-5.1 5.57-8.06A5.73 5.73 0 0 0 16.27 4zm.27 1.8a3.93 3.93 0 0 1 3.93 3.92v.3c-.08 2.15-1.07 3.33-5.51 6.84l-2.67 2.08a.04.04 0 0 1-.04 0L9.6 17.1l-.87-.7C4.6 13.1 3.8 11.98 3.8 9.73A3.93 3.93 0 0 1 7.73 5.8c1.34 0 2.51.62 3.57 1.92a.9.9 0 0 0 1.4-.01c1.04-1.3 2.2-1.91 3.57-1.91z" fill="var(--third-color)" fill-rule="nonzero"></path>
+                                <path
+                                    d="M16 4a5.95 5.95 0 0 0-3.89 1.7l-.12.11-.12-.11A5.96 5.96 0 0 0 7.73 4 5.73 5.73 0 0 0 2 9.72c0 3.08 1.13 4.55 6.18 8.54l2.69 2.1c.66.52 1.6.52 2.26 0l2.36-1.84.94-.74c4.53-3.64 5.57-5.1 5.57-8.06A5.73 5.73 0 0 0 16.27 4zm.27 1.8a3.93 3.93 0 0 1 3.93 3.92v.3c-.08 2.15-1.07 3.33-5.51 6.84l-2.67 2.08a.04.04 0 0 1-.04 0L9.6 17.1l-.87-.7C4.6 13.1 3.8 11.98 3.8 9.73A3.93 3.93 0 0 1 7.73 5.8c1.34 0 2.51.62 3.57 1.92a.9.9 0 0 0 1.4-.01c1.04-1.3 2.2-1.91 3.57-1.91z"
+                                    fill="var(--third-color)" fill-rule="nonzero"></path>
                             </g>
                         </svg>
                         <svg height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
                             <g fill="none" fill-rule="evenodd">
                                 <path d="M0 0h24v24H0z"></path>
-                                <path d="M12 3.73c-1.12.07-2 1-2 2.14v2.12h-.02a9.9 9.9 0 0 0-7.83 10.72.9.9 0 0 0 1.61.46l.19-.24a9.08 9.08 0 0 1 5.84-3.26l.2-.03.01 2.5a2.15 2.15 0 0 0 3.48 1.69l7.82-6.14a2.15 2.15 0 0 0 0-3.38l-7.82-6.13c-.38-.3-.85-.46-1.33-.46zm.15 1.79c.08 0 .15.03.22.07l7.82 6.14a.35.35 0 0 1 0 .55l-7.82 6.13a.35.35 0 0 1-.57-.28V14.7a.9.9 0 0 0-.92-.9h-.23l-.34.02c-2.28.14-4.4.98-6.12 2.36l-.17.15.02-.14a8.1 8.1 0 0 1 6.97-6.53.9.9 0 0 0 .79-.9V5.87c0-.2.16-.35.35-.35z" fill="var(--third-color)" fill-rule="nonzero"></path>
+                                <path
+                                    d="M12 3.73c-1.12.07-2 1-2 2.14v2.12h-.02a9.9 9.9 0 0 0-7.83 10.72.9.9 0 0 0 1.61.46l.19-.24a9.08 9.08 0 0 1 5.84-3.26l.2-.03.01 2.5a2.15 2.15 0 0 0 3.48 1.69l7.82-6.14a2.15 2.15 0 0 0 0-3.38l-7.82-6.13c-.38-.3-.85-.46-1.33-.46zm.15 1.79c.08 0 .15.03.22.07l7.82 6.14a.35.35 0 0 1 0 .55l-7.82 6.13a.35.35 0 0 1-.57-.28V14.7a.9.9 0 0 0-.92-.9h-.23l-.34.02c-2.28.14-4.4.98-6.12 2.36l-.17.15.02-.14a8.1 8.1 0 0 1 6.97-6.53.9.9 0 0 0 .79-.9V5.87c0-.2.16-.35.35-.35z"
+                                    fill="var(--third-color)" fill-rule="nonzero"></path>
                             </g>
                         </svg>
                     </div>
