+add scroll anim advantages

--- a/app/pages/services-select.html
+++ b/app/pages/services-select.html
@@ -468,38 +468,7 @@
     </section>
 </div>
 
-<div class="advantages">
-    <div class="container">
-        <div class="advantages__container">
-            <div class="advantages__title section__title">
-                <div class="advantages__title_line section__title_line"></div>
-                <h2 class="section__title_h2">
-                    Преимущества
-                </h2>
-            </div>
-            <div class="advantages__content">
-                <div class="advantages__content_left">
-                    Свой автопарк для перевозки
-                </div>
-                <div class="advantages__content_right">
-                    <div class="advantages__content_right_left">
-                        <p>
-                            Более 500 видов растений
-                        </p>
-                        <p>
-                            Весь товар сертифицирован
-                        </p>
-                    </div>
-                    <div class="advantages__content_right_right">
-                        <p>
-                            10 лет на рынке
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
+@@include('../sections/advantages.html')
 
 <div class="container">
     <section class="popular">
